# novaprova

./: .gitignore  .travis.yml  APSL.txt  ChangeLog  Doxyfile  Doxyfile.in  INSTALL  Makefile  Makefile.in  README.md  Vagrantfile  common.c  common.h  configure.ac  discover.c  except.h  iassert.c  icunit.c  iexcept.c  iexit.c  isyslog.c  main.c  novaprova.pc.in  np.c  np.h  np_priv.h  plat.sh.in  platform.sh  profile.pl  proxyl.c  prune-doxygen-xml.pl  run.c  setup.py  test000.c  textl.c  u4c.c  u4c.h  u4c_priv.h  uasserts.c  valgrind.supp  (+1 more)
.github/workflows/: build.yaml
doc/: requirements.txt
doc/examples/01_simple/: Makefile  mycode.c  mycode.h  mytest.c  testrunner.c
doc/examples/02_parallel/: Makefile  mytest.c  testrunner.c
doc/examples/03_jenkins/: .gitignore  Makefile  mycode.c  mytest.c
doc/examples/04_fixtures/: Makefile  mytest.c  testrunner.c
doc/examples/05_tree/: Makefile  testrunner.c
doc/examples/05_tree/startrek/tng/federation/: enterprise.c
doc/examples/05_tree/startrek/tng/klingons/: neghvar.c
doc/examples/05_tree/starwars/episode4/rebels/: xwing.c
doc/examples/06_mock/: Makefile  mycode.c  mycode.h  mytest.c
doc/examples/07_parameter/: .gitignore  Makefile  mytest.c
doc/examples/08_segv/: mytest.c
doc/examples/09_memleak/: mytest.c
doc/examples/10_exit/: .gitignore  mytest.c
doc/examples/11_syslog/: mytest.c
doc/examples/12_timeout/: mytest.c
doc/examples/13_twoparams/: mytest.c
doc/examples/14_fdleak/: .gitignore  Makefile  mytest.c
doc/examples/15_automake/: .gitignore  Makefile.am  README  configure.ac  mycode.c  mycode.h  mytest.c
doc/get-start/: .gitignore  Makefile  index.md  prologue.html
doc/get-start/example1/: .gitignore  Makefile  mycode.c  mycode.h  mytest.c  testrunner.c
doc/internal/: TODO  reflection-research.txt  releasing.rst
doc/internal/mocking-experiments/: .gitignore  Makefile  bar.c  baz.c  foo.c  quux.c  setcontext.txt
doc/manual/: .gitignore  Makefile.in  building.rst  c-api-ref.rst  conf.py  conf.py.in  failures.rst  fixtures.rst  functions.rst  getting-started.rst  index.rst  installing.rst  intro.rst  mocking.rst  output-formats.rst  parameters.rst  platform.rst  porting.rst  releasenotes.rst  releasing.rst  setup.py  todo.rst
junk/: .gitignore  GNUmakefile  call-abi.c  call-abi.txt  call-dlsym.c  except.cxx  fixed_setcontext.S  hello.c  iexcept.cxx  memleak.c  mprotect.c  nopfunc.h  osx-coredump.c  osx-ctor.c  osx-file-descriptors.c  osx-get-linkobjs.c  osx-main.c  osx-self-exe.c  osx-setcontext.c  osx-siginfo.c  osx-writable.c  prologs.txt  sigchld.c  sigusr1.c
libspiegel/: .gitignore  Makefile  common.c  common.h  commonp.C  commonp.H  spiegel.C  testrunner.cxx
libspiegel/spiegel/: common.c  common.cxx  common.h  common.hxx  commonp.cxx  filename.cxx  filename.hxx  intercept.cxx  intercept.hxx  spiegel.cxx  spiegel.hxx  tok.cxx
libspiegel/spiegel/dwarf/: abbrev.hxx  compile_unit.cxx  compile_unit.hxx  entry.cxx  entry.hxx  enumerations.cxx  enumerations.hxx  reader.hxx  reference.cxx  reference.hxx  section.hxx  state.cxx  state.hxx  string_table.cxx  string_table.hxx  value.cxx  value.hxx  walker.cxx  walker.hxx
libspiegel/spiegel/platform/: common.hxx  linux.cxx
np/: child.cxx  child.hxx  classifier.cxx  classifier.hxx  common.cxx  common.hxx  decorator.cxx  decorator.hxx  event.cxx  event.hxx  fdleak_decorator.cxx  job.cxx  job.hxx  junit_listener.cxx  junit_listener.hxx  listener.hxx  plan.cxx  plan.hxx  proxy_listener.cxx  proxy_listener.hxx  redirect.hxx  runner.cxx  runner.hxx  tap_listener.cxx  tap_listener.hxx  testmanager.cxx  testmanager.hxx  testnode.cxx  testnode.hxx  text_listener.cxx  text_listener.hxx  types.cxx  types.hxx
np/spiegel/: common.hxx  intercept.cxx  intercept.hxx  mapping.cxx  mapping.hxx  n3996.cxx  n3996.hxx  spiegel.cxx  spiegel.hxx
np/spiegel/dwarf/: abbrev.cxx  abbrev.hxx  compile_unit.cxx  compile_unit.hxx  entry.cxx  entry.hxx  enumerations.cxx  enumerations.hxx  expression.cxx  expression.hxx  lineno_program.cxx  lineno_program.hxx  link_object.cxx  link_object.hxx  reader.hxx  reference.cxx  reference.hxx  section.hxx  state.cxx  state.hxx  string_table.cxx  string_table.hxx  value.cxx  value.hxx  walker.cxx  walker.hxx
np/spiegel/platform/: abi.h  common.hxx  darwin.cxx  darwin_setcontext.S  darwin_x86_64.cxx  linux.cxx  linux_x86.cxx  linux_x86_64.cxx  mach_vm_protect.cxx  mprotect.cxx  mprotect_linux_x86.S  mprotect_linux_x86_64.S  page_align.c  vm_protect_darwin_x86_64.S  x86x.cxx
np/util/: common.cxx  common.hxx  daemon.cxx  daemon.hxx  filename.cxx  filename.hxx  log.cxx  log.hxx  profile.cxx  profile.hxx  rangetree.hxx  tok.cxx  tok.hxx  trace.c  trace.cxx  trace.h  trace.hxx  valgrind.h
spiegel/: common.cxx  filename.hxx  intercept.hxx  mapping.cxx  mapping.hxx  spiegel.cxx  spiegel.hxx  tok.cxx  tok.hxx
spiegel/dwarf/: abbrev.hxx  compile_unit.cxx  entry.cxx  enumerations.hxx  reader.hxx  reference.hxx  section.hxx  state.cxx  state.hxx  value.cxx
spiegel/platform/: linux.cxx
tests/: .gitignore  JUnit.xsd  Makefile  Makefile.in  a-fjunit-post.sh  a-fjunit-pre.sh  ad-globfunc-failed.sh  ad-namespace-failed.sh  atnparallel-post.sh  cat.pl  d-globfunc.cxx  d-membfunc.cxx  d-namespace.cxx  default-normalize.sh  fw-stubs.c  fw.c  fw.h  main.c  n3996.cxx  parallelism.sh  runcompound.sh  runtest.sh  spiegel.sh  spiegeltest.cxx  succulents.hxx  t000.c  t000.ee  t001-genc.pl  t002.c  t002.ee  t003.c  t003.ee  t005.c  t005.ee  t006.c  t006.ee  t007-post.sh  t007-pre.sh  t007.c  t008.c  (+145 more)
tools/: first-insn.pl
u4c/: child.cxx  child.hxx  classifier.cxx  classifier.hxx  common.cxx  common.hxx  event.cxx  event.hxx  job.cxx  job.hxx  junit_listener.cxx  junit_listener.hxx  listener.hxx  plan.cxx  plan.hxx  proxy_listener.cxx  proxy_listener.hxx  runner.cxx  runner.hxx  testmanager.cxx  testmanager.hxx  testnode.cxx  testnode.hxx  text_listener.cxx  text_listener.hxx  types.cxx  types.hxx
uninstalled/lib/pkgconfig/: novaprova.pc  novaprova.pc.in
